# VR-STICK-SCOPE-PUBLIC

./: .gitignore  LICENSE  README.md  README_FIRST_JA.txt  THIRD_PARTY_NOTICES.md
docs/: ROLLBACK_JA.md  SAFETY_JA.md  USAGE_JA.md
engine/: CMakeLists.txt
engine/manifest/: app.vrmanifest
engine/src/: correction_lut.cpp  correction_lut.h  ipc_server.cpp  ipc_server.h  launcher.cpp  main.cpp  openvr_manager.cpp  openvr_manager.h  osc_sender.cpp  osc_sender.h  profile.cpp  profile.h  shared_types.h
gui/: App.xaml  App.xaml.cs  DiagnosticGUI.csproj  InariKontrollerGUI.csproj  MainWindow.xaml  MainWindow.xaml.cs  app.manifest
gui/Controls/: PolarChartControl.xaml  PolarChartControl.xaml.cs  StickPlotControl.xaml  StickPlotControl.xaml.cs
gui/Models/: CorrectionLUT.cs  CorrectionProfile.cs  DiagnosticAnalysisResult.cs  StickData.cs
gui/Pages/: CircleSweepPage.xaml  CircleSweepPage.xaml.cs  DashboardPage.xaml  DashboardPage.xaml.cs  ProfilesPage.xaml  ProfilesPage.xaml.cs  RuntimePage.xaml  RuntimePage.xaml.cs
gui/Services/: DiagnosticAnalysisService.cs  DiagnosticUiStandalone.cs  EngineRuntimeService.cs  IpcClientService.cs  ProfileService.cs
scripts/: build_inari_kontroller.ps1  build_vr_stick_scope.ps1  get_steamvr_autostart_status.ps1  setup_openvr.ps1  start_engine_diagnostics.ps1  start_engine_vrchat_osc.ps1  uninstall_steamvr_autostart.ps1
